added more changes

--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html>
     <head>
         <title>James Albu - Professional Journey</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <header>
             Professional Career
         </header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#before work">Before Work</a>
+                </li>
+                <li>
+                    <a href="#florians">Florian's Woodwork, Inc</a>
+                </li>
+                <li>
+                    <a href="#highschool">High School</a>
+                </li>
+                <li>
+                    <a href="#college">College</a>
+                </li>
+                <li>
+                    <a href="#mosi">MOSI</a>
+                </li>
+                <li>
+                    <a href="#smartprocure">SmartProcure</a>
+                </li>
+            </ul>
+        </nav>
         <main>
             <section>
                 <a name="before work"></a>
@@ -39,8 +62,6 @@
                 <a name="college"></a>
                 <h1>College</h1>
                 <p>After high school, I went to the University of South Florida (USF) for college. </p>
-                <br>
-                <img src="images/usf_brand_9-5-18_3.jpg" alt="USF logo">
                 <br>
                 <img src="images/usf bull.jpg" alt="Picture of the Bull Fountain">
             </section>
