--- a/index.html
+++ b/index.html
@@ -31,82 +31,98 @@
             </ul>
         </nav>
         <main>
-            <section>
-                <a name="before work"></a>
-                <h2>Before Work</h2>
-                <p>I was born Hollywood, FL. I've lived here most of my life. I used to come
-                here to the the Hollywood Beach Boardwalk all the time.</p>
-                <!--Insert image here-->
-                <br>
-                <figure>
-                    <img src="images/hollywood.jpeg" alt="Picture of Hollywood Beach">
-                    <figcaption>Hollywood Beach Boardwalk in Florida</figcaption>
-                </figure>
-            </section>
-            <section>
-                <a name="florians"></a>
-                <h2>Florian's Woodwork, Inc</h2>
-                <p>During my late teenage years in high school, I worked with my dad to make custom cabinets.
-                I help build and install the cabinets for kitchens, closets, and bathrooms.</p>
-                <br>
-                <figure>
-                    <img src="images/cabinets.jpg" alt="Picture of cabinets">
-                    <figcaption>Example of Kitchen Cabinetry (Similar)</figcaption>
-                </figure>
-            </section>
-                <a name="highschool"></a>
-                <h2>High School/Pre-college</h2>
-                <p>My original high school was the McFatter Technical College And High School in Davie, FL.
-                However, halfway through high school I decided to go to College Academy which happened to be next door
-                at Broward College. It was there were I started to learn how to code. Python was my first programming language
-                that I learned, but I would be a while before I would use python again</p>
-                <br>
-                <figure>
-                    <img src="images/mcfatter.jpg" alt="McFatter High School logo">
-                    <figcaption>McFatter Technical High School</figcaption>
-                </figure>
-                <br>
-                <figure>
-                    <img src="images/college academy.jpg" alt="College Academy logo">
-                    <figcaption>College Academy at BC</figcaption>
-                </figure>
-            </section>
-            <section>
-                <a name="college"></a>
-                <h1>College</h1>
-                <p>After high school, I went to the University of South Florida (USF) for college. It was here where I
-                earned my Bachelors in Computer Science. I studied here for 3.5 years until I graduated at 2017.</p>
-                <br>
-                <figure>
-                    <img src="images/usf bull.jpg" alt="Picture of the Bull Fountain">
-                    <figcaption>USF Bull Fountain</figcaption>
-                </figure>
-            </section>
-            <section>
-                <a name="mosi"></a>
-                <h1>Work during College</h1>
-                <p>While I was studying at USF, I took a job at the Museum of Science and Industry, where I worked in
-                the facilities department. I maintained various mechanical systems such as the AC air handlers while also
-                preforming electrical, masonry, and plumbing work around the museum campus.</p>
-                <br>
-                <figure>
-                    <img src="images/Mosi imax dome.jpg" alt="Picture of MOSI IMAX dome">
-                    <figcaption>MOSI IMAX Dome Theater</figcaption>
-                </figure>
-            </section>
-            <section>
-                <a name="smartprocure"></a>
-                <h1>My current job - SmartProcure</h1>
-                <p>I am currently working as a Data Engineer at SmartProcure. I mainly parse purchase order data
-                    recieved from various government agencies and send the data to our databases, where we allow
-                    customers to view what a government agency spends money on so that they may be able to offer a
-                    better deal to the agency.</p>
-                <br>
-                <figure>
-                    <img src="images/portfolio-01-smartprocure-500x192.jpg" alt="Logo of SmartProcure">
-                    <figcaption>Logo of Smartprocure</figcaption>
-                </figure>
-            </section>
+            <article>
+                <section>
+                    <a name="before work"></a>
+                    <h2>Before Work</h2>
+                    <p>I was born Hollywood, FL. I've lived here most of my life. I used to come
+                    here to the the Hollywood Beach Boardwalk all the time.</p>
+                    <!--Insert image here-->
+                    <br>
+                    <figure>
+                        <img src="images/hollywood.jpeg" alt="Picture of Hollywood Beach">
+                        <figcaption>Hollywood Beach Boardwalk in Florida</figcaption>
+                    </figure>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <a name="florians"></a>
+                    <h2>Florian's Woodwork, Inc</h2>
+                    <p>During my late teenage years in high school, I worked with my dad to make custom cabinets.
+                    I help build and install the cabinets for kitchens, closets, and bathrooms.</p>
+                    <br>
+                    <figure>
+                        <img src="images/cabinets.jpg" alt="Picture of cabinets">
+                        <figcaption>Example of Kitchen Cabinetry (Similar)</figcaption>
+                    </figure>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <a name="highschool"></a>
+                    <h2>High School/Pre-college</h2>
+                    <p>My original high school was the McFatter Technical College And High School in Davie, FL.
+                    However, halfway through high school I decided to go to College Academy which happened to be next door
+                    at Broward College. It was there were I started to learn how to code. Python was my first programming language
+                    that I learned, but I would be a while before I would use python again</p>
+                    <br>
+                    <figure>
+                        <img src="images/mcfatter.jpg" alt="McFatter High School logo">
+                        <figcaption>McFatter Technical High School</figcaption>
+                    </figure>
+                    <br>
+                    <figure>
+                        <img src="images/college academy.jpg" alt="College Academy logo">
+                        <figcaption>College Academy at BC</figcaption>
+                    </figure>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <a name="college"></a>
+                    <h1>College</h1>
+                    <p>After high school, I went to the University of South Florida (USF) for college. It was here where I
+                    earned my Bachelors in Computer Science. I studied here for 3.5 years until I graduated at 2017.</p>
+                    <br>
+                    <figure>
+                        <img src="images/usf bull.jpg" alt="Picture of the Bull Fountain">
+                        <figcaption>USF Bull Fountain</figcaption>
+                    </figure>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <a name="mosi"></a>
+                    <h1>Work during College</h1>
+                    <p>While I was studying at USF, I took a job at the Museum of Science and Industry, where I worked in
+                    the facilities department. I maintained various mechanical systems such as the AC air handlers while also
+                    preforming electrical, masonry, and plumbing work around the museum campus.</p>
+                    <br>
+                    <figure>
+                        <img src="images/Mosi imax dome.jpg" alt="Picture of MOSI IMAX dome">
+                        <figcaption>MOSI IMAX Dome Theater</figcaption>
+                    </figure>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <a name="smartprocure"></a>
+                    <h1>My current job - SmartProcure</h1>
+                    <p>I am currently working as a Data Engineer at SmartProcure. I mainly parse purchase order data
+                        recieved from various government agencies and send the data to our databases, where we allow
+                        customers to view what a government agency spends money on so that they may be able to offer a
+                        better deal to the agency.</p>
+                    <br>
+                    <figure>
+                        <img src="images/portfolio-01-smartprocure-500x192.jpg" alt="Logo of SmartProcure">
+                        <figcaption>Logo of Smartprocure</figcaption>
+                    </figure>
+                </section>
+            </article>
         </main>
+        <footer>
+            <span class="copyright">&copy;</span>2019 James Albu
+        </footer>
     </body>
 </html>
